Adjusted source levels and added local test.