@@ -14,6 +14,7 @@ import com.badlogic.gdx.utils.StreamUtils;
 import com.github.raeleus.gamejoltapi.GameJoltScores.*;
 import com.github.raeleus.gamejoltapi.GameJoltUsers.GameJoltUser;
 import lombok.NonNull;
+import lombok.var;
 
 import java.io.InputStream;
 import java.net.HttpURLConnection;
@@ -365,7 +366,7 @@ public class GameJoltApi {
      */
     static String urlEncode(String string) {
         try {
-            return URLEncoder.encode(string, StandardCharsets.UTF_8).replace("+", "%20");
+            return URLEncoder.encode(string, "utf-8").replace("+", "%20");
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
